# Betsybot-Software

./: README.md  cleanup.sh  frames_2025-09-06_16.56.22.gv  frames_2025-09-07_00.56.14.gv  imu_extrinsics  imu_extrinsics.cpp  joystick-main.py  lifecycle.txt  other_pin.py  pwm_pin_status.py  pwm_pin_status.sh
apriltag_ros_core/: launch_file.py
apriltag_ros_core/apriltag_msgs/: CHANGELOG.rst  package.xml
apriltag_ros_core/apriltag_ros/config/: settings.yaml  tags.yaml
apriltag_ros_core/apriltag_ros/include/apriltag_ros/: continuous_detector.h  single_image_detector.h
apriltag_ros_core/apriltag_ros/launch/: continuous_detection.xml
apriltag_ros_core/apriltag_ros/src/: apriltag_ros_single_image_client_node.cpp  apriltag_ros_single_image_server_node.cpp
cpp_parameters/: package.xml
ros2_tut/: CMakeLists.txt
ros2_tut/src/: tut.cpp
src/: launch_superOdom_SLAM.sh
src/HesaiLidar_ROS_2.0/: CMakeLists.txt  frames_2025-09-04_23.48.43.gv
src/HesaiLidar_ROS_2.0/basement.bag/: metadata.yaml
src/HesaiLidar_ROS_2.0/config/: config.yaml  hesai_driver_params.yaml
src/HesaiLidar_ROS_2.0/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/HesaiLidar_ROS_2.0/launch/: start.py
src/HesaiLidar_ROS_2.0/log/: latest_build
src/HesaiLidar_ROS_2.0/registered/: metadata.yaml  registered_1.db3  registered_5.db3
src/SuperOdom/: readme.md
src/SuperOdom/script/: imu_converter.py
src/SuperOdom/script/rosbag2_2025_09_07-20_29_46/: metadata.yaml
src/SuperOdom/super_odometry/: CMakeLists.txt  package.xml
src/SuperOdom/super_odometry/config/: vlp_16.yaml
src/SuperOdom/super_odometry/config/velodyne/: vlp_16_calibration.yaml
src/SuperOdom/super_odometry/include/super_odometry/FeatureExtraction/: featureExtraction.h
src/SuperOdom/super_odometry/include/super_odometry/ImuPreintegration/: imuPreintegration.h
src/SuperOdom/super_odometry/include/super_odometry/LaserMapping/: laserMapping.h
src/SuperOdom/super_odometry/include/super_odometry/container/: MapRingBuffer.h
src/SuperOdom/super_odometry/include/super_odometry/gpu/: gpu_kernels.hpp
src/SuperOdom/super_odometry/include/super_odometry/sensor_data/imu/: imu_data.h
src/SuperOdom/super_odometry/launch/: vlp_16.launch.py
src/SuperOdom/super_odometry/src/: imuPreintegration_node.cpp  laserMapping_node.cpp  tf_broadcaster_node.cpp
src/SuperOdom/super_odometry/src/FeatureExtraction/: featureExtraction.cpp
src/SuperOdom/super_odometry/src/ImuPreintegration/: imuPreintegration.cpp
src/SuperOdom/super_odometry/src/LaserMapping/: laserMapping.cpp
src/SuperOdom/super_odometry_msgs/msg/: LaserFeature.msg
src/apriltag/: CMakeLists-old.txt
src/apriltag_ros_core/apriltag_msgs/: CMakeLists.txt
src/apriltag_ros_core/apriltag_ros/: CMakeLists-old.txt  CMakeLists.txt  nodelet_plugins.xml  package.xml
src/apriltag_ros_core/apriltag_ros/config/: settings.yaml  tags.yaml
src/apriltag_ros_core/apriltag_ros/include/apriltag_ros/: common_functions.h
src/apriltag_ros_core/apriltag_ros/launch/: apriltag_CNlaunch.py  cd_launch.py  continuous_detection.xml  single_image_client.xml  single_image_server.xml
src/apriltag_ros_core/apriltag_ros/src/: apriltag_ros_continuous_node.cpp  apriltag_ros_single_image_client_node.cpp  common_functions.cpp  continuous_detector.cpp  single_image_detector.cpp
src/betsybot/: CMakeLists.txt  package.xml
src/betsybot/config/: collision_monitor_params.yaml  nav2_params.yaml
src/betsybot/description/: betsybot_description-old.urdf  betsybot_description-reference.urdf  betsybot_description.urdf  laser.urdf
src/betsybot/launch/: collision_monitor_node.launch.py  display.launch.py  localization_launch.py  navigation_launch.py
src/betsybot/maps/: map.yaml
src/color-detector/: CMakeLists.txt  package.xml
src/color-detector/include/color-detector/: color-detector.hpp
src/color-detector/launch/: cd_CNlaunch.py  color_node_launch.py
src/color-detector/src/: color-detector.cpp
src/controllerDrive/: package.xml  setup.cfg  setup.py
src/controllerDrive/controllerDrive/: controller_drive-wip.py  controller_drive.py
src/cpp_parameters/: CMakeLists.txt  package.xml
src/cpp_parameters/launch/: minimal_param_node.xml
src/cpp_parameters/src/: cpp_parameters_node.cpp
src/differential-drive/: CMakeLists.txt  package.xml
src/differential-drive/include/differential-drive/: pid.hpp
src/differential-drive/src/: diff-drive-main.cpp
src/mapSaver_panel/: CMakeLists.txt  package.xml
src/mapSaver_panel/include/mapSaver_panel/: map_save_panel.hpp
src/mapSaver_panel/launch/: map_saver_panel.launch.py
src/mapSaver_panel/resource/: map_save_panel_plugin.xml
src/mapSaver_panel/rviz/: map_saver.rviz
src/mapSaver_panel/src/: map_save_panel.cpp
src/map_odom/: CMakeLists.txt  package.xml
src/map_odom/launch/: map_odom_broadcaster.launch.py
src/map_odom/src/: map_odom_broadcaster.cpp
src/master-launch/: CMakeLists.txt  package.xml
src/master-launch/launch/: master.launch.py
src/master_launch/: CMakeLists.txt  package.xml
src/master_launch/config/: ekf.yaml  pointcloud_to_laserscan_qos.yaml
src/master_launch/launch/: .slam_using_slam_toolbox_launch.py.swp  Joystick_drive.launch.py  betsy_sim.launch.py  ekf_localization_launch.py  master.launch.py  master2.launch.py  sample_pointcloud_to_laserscan_launch.py  slam_using_slam_toolbox_launch.py  slam_using_slam_toolbox_launch_old.py  slam_using_superOdom.launch.py  tb3_simulation_launch.py
src/obstacle-avoidance/: CMakeLists.txt  package.xml
src/obstacle-avoidance/include/obstacle-avoidance/: obstacle_avoidance.hpp
src/obstacle-avoidance/src/: obstacle_avoidance.cpp
src/pointcloud_to_grid/launch/: demo.launch.py
src/points_qos_relay/: CMakeLists.txt  package.xml
src/points_qos_relay/src/: points_qos_relay.cpp
src/realsense-ros/realsense2_camera_msgs/: package.xml
src/ros2_tut/: CMakeLists.txt  package.xml
src/ros2_tut/config/: tags.yaml
src/ros2_tut/launch/: single_image_server.xml
src/sensor-fusion/: CMakeLists.txt  package.xml
src/sensor-fusion/src/: SensorFusion.cpp
(+13 files in other folders)
